style/main.css
/* Import */
@import url('variable.css');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
@import url('navbar.css');

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    /* outline: solid red; */
}

html{scroll-behavior: smooth;}

body{
    background-color: var(--color-background-primary);
}

a, button{
    text-decoration: none;
    color: var(--color-background-primary);
}

h1, h2, h3, .contactFormTitle{
    font-family: "Poppins", sans-serif;
    font-weight: 600;
    font-style: normal;
}

h2{color: var(--color-primary);}
h3{color: var(--color-text-primary);}

a, button{
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-style: normal;
}

p, ul, input, label, textarea{
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: var(--color-text-primary);
    text-align: justify;
    line-height: 1.5;
}

button{border: 0;}

section:nth-child(n + 2) {
    margin-top: 100px;
}

.container{
    max-width: 1130px;
    margin-left: auto;
    margin-right: auto;
    padding: 0 20px;
}

.none{display: none;}
.flex{display: flex;}

/* ********************** CSS MOBILE FISRT ********************** */
/* Mobile < 427px */

#buttonTop{
    display: none;
    position: fixed;
    bottom: 20px;
    right: 30px;

    width: 32px;
    height: 32px;
    background-color: rgb(255,194,111);
    border-radius: 5px;
    cursor: pointer;
    z-index: 100;

    div{
        display: flex;
        justify-content: center;
        align-items: center;

        img{
            width: 24px;
        }
    }
}

#banner{
    padding: 15px;
    display: flex;
    gap: 10px;
    align-items: center;

    button{
        padding: 5px;
        background-color: var(--color-text-secondary);
    }
}

#banner.none{display: none;}

.linkUnderline{
    padding-bottom: 3px;
    padding-left: 5px;
    padding-right: 5px;
    border-bottom: 2px solid var(--color-primary);
}

.linkUnderlineNav:hover{
    border-bottom: 2px solid var(--color-background-primary);
}

.linkUnderlineFooter:hover{
    border-bottom: 2px solid var(--color-text-primary);
}

.btn{
    display: flex;
    align-items: center;
    gap: 8px;
    padding: 12px 24px;
    border-radius: 3px;
    transition: 0.5s;
    width: fit-content;
    cursor: pointer;

    img{
        width: 20px;
    }
}

.backgroundColorBtn{background-color: var(--color-primary);}
.backgroundColorBtn:hover{background-color: var(--color-secondary);}

.waveSeparator{fill: var(--color-primary); width: 100%; height: 50px;}
.waveSeparatorBottom{transform: rotate(180deg); margin-bottom: -5px;}

.card {
    background-color: var(--color-background-secondary);
    display: flex;
    gap: 20px;
    padding: 20px;
    border-radius: 15px;
    box-shadow: 0 5px 15px rgba(0,0,0,0.15);
    flex-direction: column-reverse;

    .cardContent{
        .cardContentDate {
            margin: 10px 0 20px 0;
            color: var(--color-gray);
        }

        .cardContentIcon{
            display: flex;
            flex-wrap: wrap;
            gap: 8px;
            margin-bottom: 20px;

            span{
                padding: 6px 12px;
                background-color: var(--color-background-primary);
                border-radius: 8px;
                font-size: small;
                color: var(--color-text-primary);
                display: flex;
                align-items: center;
                gap: 3px;

                img{display: none;}
            }
        }
    }
    
    .cardImg{
        img{
            width:100%;
            border-radius: 8px;
            border: 1px solid black;
        }
    }
}

#about{
    display: flex;
    flex-direction: column;
    gap: 25px;
    align-items: center;

    img{
        display: flex;
        align-items: center;
        width: 280px;
        border-radius: 25px;
    }

    #aboutContent{
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 15px;

        #aboutContentText{
            display: flex;
            flex-direction: column;
            gap: 25px;
        }
    }
}

#curriculumVitae{
    background-color: var(--color-background-secondary);

    .container{
        position: relative;
        display: flex;
        align-items: center;
    }

    #curriculumVitaeText{
        display: flex;
        flex-direction: column;
        gap: 15px;
        padding: 15px 0;

        span{font-style: italic;}
    }

    #curriculumVitaeImage{
        display: none;
    }
}

#project{
    #cardGroup{
        display: flex;
        flex-direction: column;
        gap: 25px;
        margin: 25px 0;
    }
}

#contact{
    form{
        display: flex;
        flex-direction: column;
        padding-top: 30px;

        fieldset{
            display: flex;
            flex-direction: column;
            border: 0;

            label{color: var(--color-gray);}
        }

        .contactFormGroup, button{
            display: flex;
            flex-direction: column;
            margin-top: 15px;
        }

        input, textarea{
            padding: 10px;
            padding: 10px;
            border-radius: 5px;
            outline: none;
            border: 1px solid var(--color-gray);
        }

        input:focus, textarea:focus{
            border: 2px solid var(--color-primary);

            
        }

        #contactFormConsent{
            display: flex;
            flex-direction: row;
            gap: 5px;
            font-size: small;
            label, a{color: black;}
            .consentLink{text-decoration: underline;}
        }

        #contactFormMessage{
            border-radius: 5px;
            padding: 10px;
            width: fit-content;
            flex-direction: column;
            margin-top: 15px;
            
            img{height: 24px;}

            div{
                display: flex;
                flex-direction: row;
                margin-top: 0;
                gap: 6px;

                #contactFormMessageTitre{font-weight: bold; color: black;}
            }
            #contactFormMessageText{padding-left: 30px; color: black;}
        }

        .success{
            background-color: #E6F4EA;
            border: 2px solid #7FBF9B;
        }
        .danger{
            background-color: #FDEAEA;
            border: 2px solid #E5A4A4;
        }
    }
}

footer{
    background-color: var(--color-primary);
    padding: 60px 25px;
    display: flex;
    flex-direction: column;
    align-items: center;

    div{
        display: flex;
        align-items: center;
        gap: 20px;
        margin-bottom: 25px;
    }

    #name{gap:5px}

    p{text-align: center;}

    img{width: 25px;}

    #copy{font-size: small;}

    a{color: var(--color-text-primary);}

    .filter{filter: brightness(0) saturate(100%) invert(17%) sepia(35%) saturate(667%) hue-rotate(333deg) brightness(95%) contrast(94%);}
}

#legalNotice, #privacyPolicy{
    div{
        margin-top: 50px;

        h3, p, a, ul{color: black;}

        a{font-style: italic; text-decoration: underline;}

        h3{text-decoration: underline; padding-bottom: 15px;}

        span{font-weight: bold;}

        .space{padding-bottom: 8px;}

        ul{padding-left: 25px;}
    }
}

/* *************** CSS Tablette *************** */
/* Tablette ≥ 426px */
@media screen and (min-width: 426px) {
}

/* *************** CSS LapTop *************** */
/* LapTop (NoteBock) ≥ 769px */
@media screen and (min-width: 769px) {
    .waveSeparator{height: 75px;}

    .card {
        gap: 40px;
        padding: 40px;
        flex-direction: row;
        align-items: center;

        .cardContent{
            flex: 1;

            .cardContentIcon{
                span{
                    img{
                        display: flex;
                        width: 25px;
                    }
                }
            }
        }

        .cardImg{
            flex: 1;
        }
    }

    #about{
        #aboutContent{
            flex-direction: row;
        }
    }

    #curriculumVitae{
        .container{
            padding: 80px;
            margin-top: 105px;
            margin-bottom: 80px;
        }

        #curriculumVitaeText{
            width: 55%;
            padding: 0;
        }

        #curriculumVitaeImage{
            display: block;
            position: absolute;
            right: 80px;
            top: -65px;

            img{
                width: 260px;
                border-radius: 12px;
                box-shadow: 0 20px 40px rgba(0,0,0,0.25);
            }
        }
    }

    #contact{
        form{
            fieldset{
                flex-direction: row;
                gap: 50px;
            }

            div{
                width: 100%;
            }
        }
    }

    footer{
        img{
            width: 35px;
        }
    }
}

/* *************** CSS Desktop *************** */
/* Desktop ≥ 1025px */
@media screen and (min-width: 1025px) {
    .waveSeparator{height: 100px;}
}

